--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.application.name=cc-auth-service
 spring.datasource.url=jdbc:mysql://localhost:3306/auth
 spring.datasource.username=root
 spring.datasource.password=root@123
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com/api/v1/users
 jwt.secret=4261656C64756E67
@@ -10,3 +9,6 @@ jwt.expiration=3600000
 jwt.refresh.expiration=86400000
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 aws.region=ap-south-1
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
