--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cc-auth-service
-spring.datasource.url=jdbc:mysql://localhost:3306/auth
-spring.datasource.username=root
-spring.datasource.password=root@123
+spring.datasource.url=jdbc:mysql://mpsp-dev1.c46aiypwqmbl.ap-south-1.rds.amazonaws.com:3306/auth
+spring.datasource.username=admin
+spring.datasource.password=fatrandy11
 spring.jpa.show-sql=true
 user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com/api/v1/users
 jwt.secret=4261656C64756E67
@@ -9,6 +9,6 @@ jwt.expiration=3600000
 jwt.refresh.expiration=86400000
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 aws.region=ap-south-1
-spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+logging.level.com.zaxxer.hikari=DEBUG
