--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
 spring.application.name=cc-auth-service
-spring.datasource.url=jdbc:mysql://mpsp-dev1.c46aiypwqmbl.ap-south-1.rds.amazonaws.com:3306/auth
-spring.datasource.username=admin
-spring.datasource.password=fatrandy11
-spring.jpa.show-sql=true
-user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com/api/v1/users
+spring.jpa.show-sql=false
 jwt.secret=4261656C64756E67
 jwt.expiration=3600000
 jwt.refresh.expiration=86400000
