--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 }
 
 ext {
+	set('springCloudVersion', "2023.0.3")
     openapiVersion = '2.6.0'
     nimubs = '9.37.2'
 	set('sdkVersion',"2.27.10")
@@ -38,8 +39,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	// https://mvnrepository.com/artifact/org.springframework.experimental/spring-native
-//	implementation 'org.springframework.experimental:spring-native'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
 	implementation "com.nimbusds:nimbus-jose-jwt:${nimubs}"
 	// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-common
@@ -62,7 +62,7 @@ dependencies {
 
 dependencyManagement {
 	imports {
-//		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 		mavenBom "software.amazon.awssdk:bom:${sdkVersion}"
 	}
 }
