--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ jwt.secret=4261656C64756E67
 jwt.expiration=3600000
 jwt.refresh.expiration=86400000
 spring.jpa.hibernate.ddl-auto=none
+
+
+logging.level.logging.level.project.user.UserServiceClient= BASIC
