changed secret to 256 and query modifciations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=cc-auth-service
 spring.jpa.show-sql=false
-jwt.secret=4261656C64756E67
+jwt.secret=c29tZXNlY3JldGtleTEyM2Zvcmp3dGJhc2VzY3JldDEyMzQ1Njc4OTA=
 jwt.expiration=3600000
 jwt.refresh.expiration=86400000
 spring.jpa.hibernate.ddl-auto=none
