--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://mpsp-dev1.c46aiypwqmbl.ap-south-1.rds.amazona
 spring.datasource.username=admin
 spring.datasource.password=fatrandy11
 user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com/api/v1/users
+#logging.level.org.hibernate.SQL=TRACE
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
