--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,10 @@ spring.jpa.show-sql=false
 jwt.secret=c29tZXNlY3JldGtleTEyM2Zvcmp3dGJhc2VzY3JldDEyMzQ1Njc4OTA=
 jwt.expiration=3600000
 jwt.refresh.expiration=86400000
+
 spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
 feign.client.config.userServiceClient.loggerLevel=BASIC
