--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://mpsp-dev1.c46aiypwqmbl.ap-south-1.rds.amazonaws.com:3306/auth
-spring.datasource.username=admin
-spring.datasource.password=fatrandy11
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com/api/v1/users
 #logging.level.org.hibernate.SQL=TRACE
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
