reset password and forgot password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
 feign.client.config.userServiceClient.loggerLevel=BASIC
+
+aws.ses.sender=noreply@traitfit.com
