--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=cc-auth-service
 spring.jpa.show-sql=false
-jwt.secret=c29tZXNlY3JldGtleTEyM2Zvcmp3dGJhc2VzY3JldDEyMzQ1Njc4OTA=
+jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000
 jwt.refresh.expiration=86400000
 
@@ -9,6 +9,6 @@ spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
-feign.client.config.userServiceClient.loggerLevel=BASIC
+spring.clould.openfeign.client.config.userServiceClient.loggerLevel=BASIC
 
 aws.ses.sender=noreply@traitfit.com
