Fix cors errors

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,5 @@
 user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com/api/v1/users
 #logging.level.org.hibernate.SQL=TRACE
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+allowed.origins=localhost:3000,localhost:4200
