--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,4 +3,4 @@ user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com/
 #logging.level.org.hibernate.SQL=TRACE
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-allowed.origins=localhost:3000,localhost:4200,http://platform-frontend-alb-946551445.ap-south-1.elb.amazonaws.com/*
+allowed.origins=http://localhost:3000,http://localhost:4200,http://platform-frontend-alb-946551445.ap-south-1.elb.amazonaws.com/*
