all apis refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.datasource.password=${DB_PASSWORD}
 spring.clould.openfeign.client.config.userServiceClient.loggerLevel=BASIC
 
 aws.ses.sender=noreply@traitfit.com
+
+aws.ses.key=${SES_KEY}
+aws.ses.secret=${SES_SECRET}
+
+skip.authorization.paths=/swagger-ui,/v3/api-docs,/swagger-config
+skip.authorization.urls=/actuator/health,/refresh-token,/login
+
+server.error.include-stacktrace=never
+
