Refactored generate otp method

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,3 +5,6 @@ user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com/
 
 allowed.origins=http://localhost:3000,http://localhost:4200,http://platform-frontend-alb-946551445.ap-south-1.elb.amazonaws.com/*
 fallback.url.reset.password=http://platform-frontend-alb-946551445.ap-south-1.elb.amazonaws.com/user/change-password
+
+
+aws.ses.sender=sahithi.k@traitfit.com
