--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -46,7 +46,7 @@ permissions:
 jobs:
   deploy:
     name: Deploy
-    runs-on: ubuntu-latest-arm64
+    runs-on: ubuntu-latest
     environment: dev
 
     steps:
