--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ aws.ses.key=${SES_KEY}
 aws.ses.secret=${SES_SECRET}
 
 skip.authorization.paths=/swagger-ui,/v3/api-docs,/swagger-config
-skip.authorization.urls=/actuator/health,/refresh-token,/login
+skip.authorization.urls=/actuator/health,/refresh-token,/login, /create-user, /forgot-password
 
 server.error.include-stacktrace=never
 
