handling otp verification failure

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
 
 user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com/api/v1/users
-#logging.level.org.hibernate.SQL=TRACE
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.hibernate.SQL=TRACE
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# spring.jpa.show-sql=true
 
 allowed.origins=http://localhost:3000,http://localhost:4200,http://platform-frontend-alb-946551445.ap-south-1.elb.amazonaws.com/*
 fallback.url.reset.password=http://platform-frontend-alb-946551445.ap-south-1.elb.amazonaws.com/auth/forgot-password
