Added service connect urls

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 
-user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com/api/v1/users
+#user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com
+user.service.url=${USER_SERVICE_URL}
 # logging.level.org.hibernate.SQL=TRACE
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # spring.jpa.show-sql=true
