--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,7 @@
-
-#user.service.url=http://user-service-alb-713326252.ap-south-1.elb.amazonaws.com
 user.service.url=${USER_SERVICE_URL}
 # logging.level.org.hibernate.SQL=TRACE
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # spring.jpa.show-sql=true
 
-allowed.origins=http://localhost:3000,http://localhost:4200,http://platform-frontend-alb-946551445.ap-south-1.elb.amazonaws.com/*
-fallback.url.reset.password=http://platform-frontend-alb-946551445.ap-south-1.elb.amazonaws.com/auth/forgot-password
+allowed.origins=http://localhost:3000,http://localhost:4200,https://mpsp.dev.trait.fit.com, https://lms.dev.trait.fit.com
+fallback.url.reset.password=https://mpsp.dev.trait.fit/auth/forgot-password
