added login url to cors

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,5 +3,5 @@ user.service.url=${USER_SERVICE_URL}
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # spring.jpa.show-sql=true
 
-allowed.origins=http://localhost:3000,http://localhost:4200,https://mpsp.dev.trait.fit.com, https://lms.dev.trait.fit.com
+allowed.origins=http://localhost:3000,http://localhost:4200,https://mpsp.dev.trait.fit.com, https://lms.dev.trait.fit.com,https://mpsp-be.dev.trait.fit/api/v1/auth/login
 fallback.url.reset.password=http://platform-frontend-alb-946551445.ap-south-1.elb.amazonaws.com/auth/reset-password
