fallback url and reset pw token bypass

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,4 +4,4 @@ user.service.url=${USER_SERVICE_URL}
 # spring.jpa.show-sql=true
 
 allowed.origins=http://localhost:3000,http://localhost:4200,https://mpsp.dev.trait.fit,https://lms.dev.trait.fit
-fallback.url.reset.password=http://platform-frontend-alb-946551445.ap-south-1.elb.amazonaws.com/auth/reset-password
+fallback.url.reset.password=https://mpsp.dev.trait.fit/auth/reset-password
