--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,3 +5,6 @@ user.service.url=${USER_SERVICE_URL}
 
 allowed.origins=http://localhost:3000,http://localhost:4200,https://mpsp.dev.trait.fit,https://lms.dev.trait.fit
 fallback.url.reset.password=https://mpsp.dev.trait.fit/auth/reset-password
+
+
+base.url=https://mpsp.dev.trait.fit
