Updated mpsp cors url

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ user.service.url=http://localhost:4000/api/v1/users
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # spring.jpa.show-sql=true
 
-allowed.origins=http://localhost:3000,http://localhost:4200,https://mpsp.dev.trait.fit,https://lms.dev.trait.fit
+allowed.origins=http://localhost:3000,http://localhost:4200,https://mpsp.dev.trait.fit,https://mpsp-fe.dev.trait.fit,https://lms.dev.trait.fit
 fallback.url.reset.password=https://mpsp.dev.trait.fit/auth/reset-password
 
 
