Fixed user service url

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-#user.service.url=${USER_SERVICE_URL}
-user.service.url=http://localhost:4000/api/v1/users
+user.service.url=${USER_SERVICE_URL}
+#user.service.url=http://localhost:4000/api/v1/users
 # logging.level.org.hibernate.SQL=TRACE
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # spring.jpa.show-sql=true
