Added cors header

--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -3,7 +3,7 @@ user.service.url=${USER_SERVICE_URL}
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # spring.jpa.show-sql=true
 
-allowed.origins=http://localhost:3000,http://localhost:4200,https://mpsp.sit.trait.fit,https://lms.sit.trait.fit
+allowed.origins=http://localhost:3000,http://localhost:4200,https://mpsp.sit.trait.fit,https://mpsp-fe.sit.trait.fit,https://lms.sit.trait.fit
 fallback.url.reset.password=https://mpsp.sit.trait.fit/auth/reset-password
 
 
