--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ skip.authorization.urls=/actuator/health,/refresh-token,/login,/create-user,/for
 
 server.error.include-stacktrace=never
 
-
+max.login.attempts=5
 
