Added issuer and audience

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,4 @@ fallback.url.reset.password=https://mpsp.dev.trait.fit/auth/reset-password
 
 
 base.url=https://mpsp.dev.trait.fit
+jwt.aud=https://mpsp-fe.dev.trait.fit
