--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -8,3 +8,4 @@ fallback.url.reset.password=https://mpsp.sit.trait.fit/auth/reset-password
 
 
 base.url=https://mpsp.sit.trait.fit
+jwt.aud=https://mpsp-fe.sit.trait.fit
