--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -33,7 +33,7 @@ on:
 env:
   AWS_REGION: ap-south-1 # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: cc-auth-service # set this to your Amazon ECR repository name
-  ECS_SERVICE: auth-service-alb-service # set this to your Amazon ECS service name
+  ECS_SERVICE: auth-service # set this to your Amazon ECS service name
   ECS_CLUSTER: staging-environment-cluster # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION:
     auth-service-task-definition-staging.json # set this to the path to your Amazon ECS task definition
