--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,9 @@
-user.service.url=${USER_SERVICE_URL}
 #user.service.url=http://localhost:4000/api/v1/users
 # logging.level.org.hibernate.SQL=TRACE
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # spring.jpa.show-sql=true
 
-fallback.url.reset.password=https://mpsp.dev.trait.fit/auth/reset-password
+fallback.url.reset.password=https://mpsp-fe.dev.trait.fit/auth/reset-password
 
 
 jwt.iss=https://mpsp-be.dev.trait.fit
