--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,12 @@ aws.ses.sender=noreply@traitfit.com
 
 
 skip.authorization.paths=/swagger-ui,/v3/api-docs,/swagger-config
-skip.authorization.urls=/actuator/health,/refresh-token,/login,/create-user,/forgot-password,/reset-password,/user-roles,/login-history/**
+skip.authorization.urls=/actuator/health,/refresh-token,/login,/create-user,/forgot-password,/reset-password/self,/user-roles,/login-history/**
 
 server.error.include-stacktrace=never
 
 max.login.attempts=5
 
+user.service.url=${USER_SERVICE_URL}
+
+school.service.url=${SCHOOL_SERVICE_URL}
