--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # spring.jpa.show-sql=true
 
-fallback.url.reset.password=https://mpsp-fe.dev.trait.fit/auth/reset-password
+fallback.url.reset.password=https://mpsp-fe.dev.trait.fit/platform/auth/reset-password
 
 
 jwt.iss=https://mpsp-be.dev.trait.fit
