--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ max.login.attempts=5
 user.service.url=${USER_SERVICE_URL}
 
 school.service.url=${SCHOOL_SERVICE_URL}
+
+notification.service.url=${NOTIFICATION_SERVICE_URL}
