--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -28,7 +28,7 @@ name: Deploy to Amazon ECS-dev
 
 on:
   push:
-    branches: ["dev", "verification-flow"]
+    branches: ["dev"]
 
 env:
   AWS_REGION: ap-south-1 # set this to your preferred AWS region, e.g. us-west-1
