--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -4,5 +4,5 @@
 
 fallback.url.reset.password=https://mpsp-fe.sit.trait.fit/platform/auth/reset-password
 
-jwt.iss=https://mpsp-be.sit.trait.fit
+jwt.iss=https://mpsp-api.sit.trait.fit
 jwt.aud=https://mpsp-fe.sit.trait.fit
