--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -28,7 +28,7 @@ name: Deploy to Amazon ECS-staging
 
 on:
   push:
-    branches: ["staging"]
+    branches: ["staging", "newrelic_infra"]
 
 env:
   AWS_REGION: ap-south-1 # set this to your preferred AWS region, e.g. us-west-1
