--- a/newrelic/newrelic copy.example
+++ b/newrelic/newrelic copy.example
@@ -7,6 +7,13 @@
 # This section is for settings common to all environments.
 # Do not add anything above this next line.
 common: &default_settings
+  # ============================== LICENSE KEY ===============================
+  # You must specify the license key associated with your New Relic
+  # account. For example, if your license key is 12345 use this:
+  # license_key: '12345'
+  # The key binds your agent's data to your account in the New Relic service.
+  license_key: "1234"
+
   # Agent Enabled
   # Use this setting to disable the agent instead of removing it from the startup command.
   # Default is true.
