--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id ("jacoco")
 	id("java")
-	id("org.springframework.boot") version "3.3.5"
+	id("org.springframework.boot") version "3.4.0"
 	id("io.spring.dependency-management") version "1.1.6"
 }
 
@@ -23,13 +23,14 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
 }
 
 ext {
-	set('springCloudVersion', "2023.0.3")
+	set('springCloudVersion', "2024.0.0-RC1")
     openapiVersion = '2.6.0'
-    nimubs = '9.45'
-	set('sdkVersion',"2.29.7")
+    nimubs = '9.47'
+	set('sdkVersion',"2.29.17")
 }
 dependencies {
 	// Spring Boot Starters
