added frontend url to properties

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -16,6 +16,11 @@
       "description": "Notification service url to be used for send notifications"
     },
     {
+      "name": "frontend.url",
+      "type": "java.lang.String",
+      "description": "Frontend url to be used as params in email templates"
+    },
+    {
       "name": "fallback.url.reset.password",
       "type": "java.lang.String",
       "description": "Fallback url to be used for reset password"
