--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ user.service.url=${USER_SERVICE_URL}
 school.service.url=${SCHOOL_SERVICE_URL}
 
 notification.service.url=${NOTIFICATION_SERVICE_URL}
+
+frontend.url=${FRONTEND_URL}
