--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ school.service.url=${SCHOOL_SERVICE_URL}
 notification.service.url=${NOTIFICATION_SERVICE_URL}
 
 frontend.url=${FRONTEND_URL}
+
+service.env=${SPRING_PROFILES_ACTIVE}
