--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000
 jwt.refresh.expiration=86400000
 
+server.forward-headers-strategy=framework
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
