Increased number of connections

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
+spring.datasource.hikari.maximum-pool-size=50
+
 spring.clould.openfeign.client.config.userServiceClient.loggerLevel=BASIC
 
 aws.ses.sender=noreply@traitfit.com
