--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.show-sql=false
 jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000
 jwt.refresh.expiration=86400000
-
+spring.threads.virtual.enabled=true
 server.forward-headers-strategy=framework
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
