--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,3 +8,8 @@ fallback.url.reset.password=https://mpsp-fe.dev.trait.fit/platform/auth/reset-pa
 
 jwt.iss=https://mpsp-be.dev.trait.fit
 jwt.aud=https://mpsp-fe.dev.trait.fit
+
+# logging.level.org.springframework.amqp=DEBUG
+# logging.level.com.rabbitmq=DEBUG
+
+spring.rabbitmq.host=b-3f314831-e0cb-4021-809b-6adf4f0b0ba6.mq.ap-south-1.amazonaws.com
