--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,15 @@ spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.hikari.maximum-pool-size=50
 
+spring.rabbitmq.port=5671
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.rabbitmq.listener.simple.concurrent-consumers=5
+spring.rabbitmq.listener.simple.max-concurrent-consumers=10
+spring.rabbitmq.ssl.enabled=true
+spring.rabbitmq.ssl.validate-server-certificate=false
+
+rabbitmq.queue.name=user_creation
 spring.clould.openfeign.client.config.userServiceClient.loggerLevel=BASIC
 
 aws.ses.sender=noreply@traitfit.com
