Added staging secrets

--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -2,6 +2,7 @@
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # spring.jpa.show-sql=true
 
+spring.rabbitmq.host=b-3f314831-e0cb-4021-809b-6adf4f0b0ba6.mq.ap-south-1.amazonaws.com
 fallback.url.reset.password=https://mpsp-fe.sit.trait.fit/platform/auth/reset-password
 
 jwt.iss=https://mpsp-api.sit.trait.fit
