Reduced number of connections

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,6 +3,9 @@
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # spring.jpa.show-sql=true
 
+
+spring.datasource.hikari.maximum-pool-size=10
+
 fallback.url.reset.password=https://mpsp-fe.dev.trait.fit/platform/auth/reset-password
 
 
