--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,9 @@ dependencies {
 
 	// MySQL Connector
 	runtimeOnly("com.mysql:mysql-connector-j")
+	// https://mvnrepository.com/artifact/com.newrelic.agent.java/newrelic-api
+	runtimeOnly("com.newrelic.agent.java:newrelic-api:8.16.0")
+
 
 	// Testing dependencies
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
