--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,11 @@
-# logging.level.org.hibernate.SQL=TRACE
+logging.level.org.hibernate.SQL=TRACE
+logging.level.com.zaxxer.hikari=DEBUG
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # spring.jpa.show-sql=true
+
+spring.datasource.tomcat.test-while-idle=true
+spring.datasource.tomcat.validation-query==SELECT 1
+
 
 spring.rabbitmq.host=b-34adcb66-c9b2-4897-808f-a64e2b47e16c.mq.ap-south-1.amazonaws.com
 fallback.url.reset.password=https://mpsp-fe.sit.trait.fit/platform/auth/reset-password
