--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,5 +8,5 @@ spring.datasource.tomcat.validation-query==SELECT 1
 spring.rabbitmq.host=b-34adcb66-c9b2-4897-808f-a64e2b47e16c.mq.ap-south-1.amazonaws.com
 fallback.url.reset.password=https://dronarjun.mpcareerportal.in/platform/auth/reset-password
 
-jwt.iss=https://dronarjun.mpcareerportal.in
+jwt.iss=https://api.mpcareerportal.in
 jwt.aud=https://dronarjun.mpcareerportal.in
