--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,7 @@ jacocoTestReport {
             fileTree(dir: it, exclude: [
 				    "com/mpsp/cc_auth_service/CcAuthServiceApplication*",
                     "com/mpsp/cc_auth_service/entity/*",
+					"com/mpsp/cc_auth_service/controllers/*",
                     "com/mpsp/cc_auth_service/dto/*",
 					"com/mpsp/cc_auth_service/error/*",
                     "com/mpsp/cc_auth_service/repository/*",
