--- a/build.gradle
+++ b/build.gradle
@@ -94,7 +94,11 @@ test {
 
 jacocoTestReport {
     dependsOn test // tests are required to run before generating the report
-
+	
+	reports {
+        html.required.set(true)
+        xml.required.set(true)
+    }
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it, exclude: [
