--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -43,6 +43,8 @@ jobs:
           min-coverage-overall: 95
           min-coverage-changed-files: 95
           debug-mode: false
+          title: Code Coverage
+          update-comment: true
 
       - name: Get the Coverage info
         run: |
