--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -64,6 +64,17 @@ jobs:
       - name: Run Coverage
         run: ./gradlew jacocoTestReport
 
+      - name: Jacoco Report to PR
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.1
+        with:
+          path: ${{ github.workspace }}/build/reports/jacoco/test/jacocoTestReport.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 95
+          min-coverage-changed-files: 95
+          debug-mode: false
+          title: Code Coverage
+
       - name: Get the Coverage info
         run: |
           echo "Total coverage ${{ steps.jacoco.outputs.coverage-overall }}"
