--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -95,7 +95,7 @@ jobs:
             core.setFailed('Changed files coverage is less than 95%!')
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -x test
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
