--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -115,7 +115,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }}-dev
+          IMAGE_TAG: dev-${{ github.sha }}
         run: |
           # Build a docker container and
           # push it to ECR so that it can
